# quant-strategy-lab

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
deploy/: Cargo.toml  README.md
deploy/crates/alpaca-broker/: Cargo.toml
deploy/crates/alpaca-broker/src/: lib.rs
deploy/crates/qsl-types/: Cargo.toml
deploy/crates/qsl-types/src/: lib.rs
scripts/: new_strategy.py
src/qsl/: __init__.py
src/qsl/backtest/: __init__.py  engine.py  metrics.py
src/qsl/data/: __init__.py  loader.py
src/qsl/indicators/: __init__.py  core.py
src/qsl/portfolio/: __init__.py
src/qsl/reporting/: __init__.py  export.py
src/qsl/signals/: __init__.py
src/qsl/strategies/: __init__.py  base.py
strategies/template_strategy/: README.md  config.yaml  run_backtest.py  strategy.py
tests/qsl/: test_backtest.py  test_metrics.py
tests/strategies/: test_gamma_cirques_smoke.py
