[project]
name = "qsl"
version = "0.1.0"
description = "Quant strategy lab — shared research and backtest utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4",
    "pandas>=3.0",
    "scipy>=1.17",
    "yfinance>=1.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qsl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
